test/fail/semicolon2.min
program
    $$ Semicolon not allowed after last argument
    function void f number x; number y; done
start
end
